infrastructure/k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      app: query
    replicas: 1
  template:
    labels:
      app: query
    spec:
      containers:
        - name: query
          image: musamauet/query-service
          imagePullPolicy: IfNotPersent
