infrastructure/k8s/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: musamauet/comments-service
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      port: 5000
      targetPort: 5000
      protocol: TCP
