infrastructure/k8s/moderation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: musamauet/moderation-service
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      port: 7000
      targetPort: 7000
      protocol: TCP
